👾  - Fix spacing on writing list dates

--- a/src/assets/scss/components/_writing-list.scss
+++ b/src/assets/scss/components/_writing-list.scss
@@ -32,6 +32,7 @@
     letter-spacing: 0.5px;
     text-transform: uppercase;
     @include screen(lg) {
+      width: 3.5rem;
       grid-column: unset;
       align-self: end;
       margin: 0;
@@ -110,7 +111,9 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       ~ #{$this}__image-container {
         color: $color--mid;
         img {
